Padding glitch fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ details {
   cursor: pointer;
   font-size: 1.3rem;
   color: var(--very-dark-gray-blue);
+  padding-right: 2.35rem;
 }
 
 .container details summary:active {
